--- a/app/package.json
+++ b/app/package.json
@@ -9,10 +9,12 @@
     },
     "dependencies": {
         "@project-serum/anchor": "^0.24.1",
+        "@solana/wallet-adapter-base": "^0.9.5",
         "@solana/wallet-adapter-wallets": "^0.15.5",
         "@solana/web3.js": "^1.37.1",
         "autoprefixer": "^10.4.4",
         "core-js": "^3.8.3",
+        "dayjs": "^1.11.0",
         "postcss": "^8.4.12",
         "solana-wallets-vue": "^0.3.2",
         "tailwindcss": "^3.0.24",
