--- a/program-rust/Anchor.toml
+++ b/program-rust/Anchor.toml
@@ -3,6 +3,9 @@ seeds = false
 [programs.localnet]
 sol_linked = "2YC5MHSsjY6G5nY2Ckmwso8C8Gr7SMYe1SUvyu1FrNzJ"
 
+[programs.devnet]
+solana_twitter = "2YC5MHSsjY6G5nY2Ckmwso8C8Gr7SMYe1SUvyu1FrNzJ"
+
 [registry]
 url = "https://anchor.projectserum.com"
 
@@ -12,4 +15,4 @@ wallet = "/Users/anamansari/.config/solana/id.json"
 
 [scripts]
 test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
-copy-idl = "mkdir -p app/src/idl && cp target/idl/sol_linked.json app/src/idl/sol_linked.json"
+copy-idl = "mkdir -p ../app/src/idl && cp target/idl/sol_linked.json ../app/src/idl/sol_linked.json"
